k8s/k8s-service.yml
kind: Service
apiVersion: v1
metadata:
  name: kalah
spec:
  selector:
    app: kalah
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
