k8s/k8s-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kalah
  annotations:
   kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: kalah.kieranjohnmoore.com
    http:
      paths:
      - backend:
          serviceName: kalah
          servicePort: 80
